[b]Version 0.6.2[/b]:

(2008-06-01)
 * (Bugfix) The "modify shortcut" dialog was under the other windows if
   the option Video -> Stay on top was enabled.
 * Started to write the code to make the toolbars configurable:
    - the list of actions in a widget can be saved to the config file
    - a widget can be populated with the actions read from the config file 
    - as a test the toolbar1, controlwidget and controlwidget_mini in 
      defaultgui are saved to the config and loaded on startup

(2008-05-30)
 * The maximum port for the single instance is 65535, instead of 99999.
 * Added a new option in guiconfig.h, USE_MINIMUMSIZE. If set to 1
   the main window will not be smaller than the control widget size hint.


[b]Version 0.6.1[/b]:

(2008-05-26)
 * The command line option -mini has been renamed to -minigui (-mini still 
   works)
 * Added a new command line option -defaultgui, which selects the default
   gui.
 * Added an option in Preferences->Interface to select the preferred GUI.
   This option is not applied immediately, you need to close smplayer and
   open it again.
   Note: the command line options -minigui and -defaultgui have preference 
   over this option.

(2008-05-25)
 * Some internal changes: baseguiplus saves some variables to the config
   file so it can exit from compact mode properly even if made between
   different sessions. Also the code to resize the main window when
   entering/exiting compact mode has been moved from defaultgui to
   baseguiplus. BTW, compact mode is broken if the playlist is embedded
   in the main window.
 * Maybe the compact mode with the playlist embedded in the main window 
   is fixed now.

(2008-05-24)
 * Added "gl:yuv=2:force-pbo:ati-hack" to the list of video drivers. This
   seems to be very fast. Requires mplayer svn r26853 (from 2008-05-22).
 * Now the video driver by default on Windows Vista is gl, instead of
   directx. (Untested)

(2008-05-22)